samples/_failures_safe/1761094917_745aa3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_422203a4.c: In function ‘main’:
./samples/SAFE/__tmp_422203a4.c:148:17: error: expected expression at end of input
  148 |                 if (!
      |                 ^~
./samples/SAFE/__tmp_422203a4.c:148:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_422203a4.c:148:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_422203a4.c:148:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_422203a4.c:148:17: error: expected declaration or statement at end of input
